--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
     <div class="container-general">
         <section class="container-botones">
             <div class="container-notas">
-                <div class="nota js"><p class="p-do">DO</p></div>
-                <div class="nota js"><p class="p-do-s">DO#</p></div>
+                <div class="nota js"><p class="p-do">DO/C</p></div>
+                <div class="nota js"><p class="p-do-s">DO#/C#</p></div>
             </div>
             <div class="container-notas">
-                <div class="nota js"><p class="p-re">RE</p></div>
-                <div class="nota js"><p class="p-re-s">RE#</p></div>
+                <div class="nota js"><p class="p-re">RE/D</p></div>
+                <div class="nota js"><p class="p-re-s">RE#/D#</p></div>
             </div>
             <div class="container-notas">
-                <div class="nota-mi js"><p class="p-mi">MI</p></div>
+                <div class="nota-mi js"><p class="p-mi">MI/E</p></div>
             </div>
             <div class="container-notas">
-                <div class="nota js"><p class="p-fa">FA</p></div>
-                <div class="nota js"><p class="p-fa-s">FA#</p></div>
+                <div class="nota js"><p class="p-fa">FA/F</p></div>
+                <div class="nota js"><p class="p-fa-s">FA#/F#</p></div>
             </div>
             <div class="container-notas">
-                <div class="nota js"><p class="p-sol">SOL</p></div>
-                <div class="nota js "><p class="p-sol-s">SOL#</p></div>
+                <div class="nota js"><p class="p-sol">SOL/G</p></div>
+                <div class="nota js "><p class="p-sol-s">SOL#/G#</p></div>
             </div>
             <div class="container-notas">
-                <div class="nota js"><p class="p-la">LA</p></div>
-                <div class="nota js"><p class="p-la-s">LA#</p></div>
+                <div class="nota js"><p class="p-la">LA/A</p></div>
+                <div class="nota js"><p class="p-la-s">LA#/A#</p></div>
             </div>
             <div class="container-notas">
-                <div class="nota-si js"><p class="p-si">SI</p></div>
+                <div class="nota-si js"><p class="p-si">SI/B</p></div>
             </div>
             <div class="container-notas">
                 <div class="nota js spacebar"><p>Space</p></div>
